// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-control-group wp-components-stepper css-1l1keo8"
  data-g2-c16t="true"
  data-g2-component="Stepper"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-b4041i"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-button css-qt6rbo"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-2r7rsp"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-bzokzn"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-h443as"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-9qi4f8"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-button css-1xokiu0"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-2r7rsp"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-bzokzn"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-h443as"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render size 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-control-group wp-components-stepper css-1l1keo8"
  data-g2-c16t="true"
  data-g2-component="Stepper"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-b4041i"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-button css-13bwwgm"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-2r7rsp"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-bzokzn"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-h443as"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-9qi4f8"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-button css-kbbwd4"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-2r7rsp"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-bzokzn"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-h443as"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render vertically 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-control-group wp-components-stepper css-14w80q"
  data-g2-c16t="true"
  data-g2-component="Stepper"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-1nln54x"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-button css-tfog1k"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-2r7rsp"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-bzokzn"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="18 15 12 9 6 15"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-h443as"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-r8yw7e"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-button css-17sf91w"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-2r7rsp"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-bzokzn"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-h443as"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;
